--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,28 +6,31 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
 
-    <link rel='stylesheet prefetch' href='https://cdn.gitcdn.xyz/cdn/angular/bower-material/v1.0.1-master-2eaf210/angular-material.css'>
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <!--<link rel='stylesheet prefetch' href='https://material.angularjs.org/1.0.1-master-2eaf210/docs.css'>-->
 
     <link rel="stylesheet" href="stylesheets/angular_style.css">
 
 
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js'></script>
-    <script src='https://cdn.gitcdn.xyz/cdn/angular/bower-material/v1.0.1-master-2eaf210/angular-material.js'></script>
-    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/assets-cache.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resource.min.js"></script>
 
+
+        <!-- Angular Material Library -->
+    <script src="https://code.angularjs.org/1.4.9/angular-route.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.4/angular-material.min.js"></script>
     <script src="javascripts/login_index.js"></script>
 
 
 
 </head>
-<body>
+<body >
 
-    <div ng-controller="AppCtrl"  ng-cloak=""  >
+    <div ng-controller="AppCtrl"  ng-cloak="" layout-fill >
         <md-content>
 
             <md-toolbar layout="row" flex>
@@ -49,8 +52,7 @@
             </md-toolbar>
 
         </md-content>
-        <div class="page-layout simple right-sidenav ng-scope layout-row">
-        <section layout="row" flex>
+        <!--<section layout="row" >-->
             <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" >
                 <md-toolbar class="md-theme-indigo">
                     <h1 class="md-toolbar-tools">Sidenav Left</h1>
@@ -71,7 +73,18 @@
 
                         </md-card-content>
                     </md-card>
+
                 </md-content>
+                <div layout="column" layout-padding>
+                    <md-button flex="100" class="md-raised md-primary">Profile</md-button>
+                    <br/>
+                    <md-button class="md-raised md-primary">Academic Marks</md-button><md-button flex="100" class="md-raised md-primary">Profile</md-button>
+                    <br/>
+                    <md-button class="md-raised md-primary">Academic Marks</md-button><md-button flex="100" class="md-raised md-primary">Profile</md-button>
+                    <br/>
+                    <md-button class="md-raised md-primary">Academic Marks</md-button>
+                </div>
+
             </md-sidenav>
 
             <!--<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
@@ -91,10 +104,15 @@
                     </md-button>
                 </md-content>
             </md-sidenav>-->
-        </section>
-            <div ng-view>
-                <md-content id="change" class="md-padding" layout="row" layout-wrap layout-align="center start" style="z-index: 3; box-shadow: 0 4px 5px -2px rgba(0,0,0,.2),0 7px 10px 1px rgba(0,0,0,.14),0 2px 16px 1px rgba(0,0,0,.12);" layout-xs="column">
-            <div layout="row">
+        <!--</section>-->
+        <div class="page-layout simple right-sidenav ng-scope layout-row">
+
+            <div style="height: 90vh;">
+                <md-content id="change" class="md-padding" layout="row" layout-wrap layout-align="center start" style="height: 100vh;z-index: 3; box-shadow: 0 4px 5px -2px rgba(0,0,0,.2),0 7px 10px 1px rgba(0,0,0,.14),0 2px 16px 1px rgba(0,0,0,.12);" layout-xs="column">
+
+
+          <!--THIS IS THE DUMMY CARDS PLACEHOLDER-->
+            <!--<div   layout="row">
                 <md-card>
                     <md-card-title>
                         <md-card-title-text>
@@ -155,21 +173,11 @@
                         <md-button>Action 2</md-button>
                     </md-card-actions>
                 </md-card>
-            </div>
+            </div>-->
 
 
-            <div layout="row" style="width: 100%;">
-                <md-card style="width: 300px;" ng-repeat="user in x track by $index">
-                    <img ng-src="{{user.logo_url}}" height="100px" width="100px" class="md-card-image" alt="user avatar">
-                    <md-card-content>
-                        <h2>{{user.company_name}}</h2>
-                        <p>{{user.JD}}</p>
-                    </md-card-content>
-                    <div class="md-actions" layout="row" layout-align="end center">
-                        <md-button>Reject(chances)</md-button>
-                        <md-button>View</md-button>
-                    </div>
-                </md-card>
+            <div ng-view layout="row" style="width: 100%;">
+
             </div>
 
         </md-content>
@@ -194,7 +202,7 @@
 
             </md-sidenav>
 
-    </div>
+        </div>
 
 </body>
 </html>
