--- a/views/login.ejs
+++ b/views/login.ejs
@@ -76,13 +76,15 @@
 
                 </md-content>
                 <div layout="column" layout-padding>
-                    <md-button flex="100" class="md-raised md-primary">Profile</md-button>
-                    <br/>
-                    <md-button class="md-raised md-primary">Academic Marks</md-button><md-button flex="100" class="md-raised md-primary">Profile</md-button>
-                    <br/>
-                    <md-button class="md-raised md-primary">Academic Marks</md-button><md-button flex="100" class="md-raised md-primary">Profile</md-button>
-                    <br/>
-                    <md-button class="md-raised md-primary">Academic Marks</md-button>
+                    <md-button href="#/" class="md-raised md-primary">Home</md-button>
+
+                    <md-button href="#profile" class="md-raised md-primary">Profile</md-button>
+
+                    <md-button href="#marks" class="md-raised md-primary">Academic Marks</md-button>
+
+                    <md-button href="#attendance" class="md-raised md-primary">Attendance</md-button>
+
+
                 </div>
 
             </md-sidenav>
