--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,12 +32,10 @@
 
 
 
-  <md-content layout-padding="">
+  <md-content layout-padding="" style="overflow: hidden;">
 
     <div>
       <form name="userForm">
-
-
         <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm="">
             <label>First name</label>
