--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
 
 <body>
 
-<div ng-controller="DemoCtrl" layout="column" ng-cloak="" class="md-inline-form inputdemoBasicUsage" ng-app="MyApp">
+<div ng-controller="DemoCtrl" layout="column" layout-align="center none" ng-cloak="" class="md-inline-form inputdemoBasicUsage" ng-app="MyApp">
 
 
 
