--- a/views/login.ejs
+++ b/views/login.ejs
@@ -187,18 +187,23 @@
             <md-sidenav class="sidenav md-sidenav-right md-closed ms-scroll ng-isolate-scope md-locked-open ps-container ps-active-y" md-is-locked-open="$mdMedia('gt-md')" md-component-id="sidenav" ms-scroll="" ms-sidenav-helper="" tabindex="-1" style="z-index: 2;" data-ps-id="30355f1e-2027-94ed-d4ae-1fbc454b50f5">
 
 
-                <md-content>
+                <md-content flex>
                     <md-list>
+
                         <md-list-item class="md-3-line" ng-repeat="user in x track by $index">
-                            <!--<img ng-src="{{user.logo_url}}?{{$index}}" class="face" alt="{{item.who}}">-->
+
+
                             <div class="md-list-item-text">
                                 <h3>{{user.company_name}}</h3>
                                 <h4>{{user.package}}</h4>
                                 <p>{{user.JD}}</p>
                                 <p>{{user.company_description}}</p>
                             </div>
-                            <md-divider md-inset ng-if="!$last"></md-divider>
+                            <img ng-src="{{user.logo_url}}?{{$index}}" class="face" alt="{{item.who}}" style="width: 40px;height: 40px">
+                            <md-divider inset></md-divider>
+
                         </md-list-item>
+
                     </md-list>
                 </md-content>
 
