--- a/views/login.ejs
+++ b/views/login.ejs
@@ -186,7 +186,7 @@
             </div>
             <md-sidenav class="sidenav md-sidenav-right md-closed ms-scroll ng-isolate-scope md-locked-open ps-container ps-active-y" md-is-locked-open="$mdMedia('gt-md')" md-component-id="sidenav" ms-scroll="" ms-sidenav-helper="" tabindex="-1" style="z-index: 2;" data-ps-id="30355f1e-2027-94ed-d4ae-1fbc454b50f5">
 
-
+<!--delete-->
                 <md-content flex>
                     <md-list>
 
