--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,10 +36,10 @@
             <md-toolbar layout="row" flex>
                 <div class="md-toolbar-tools">
                     <md-button aria-label="Go Back" ng-click="toggleLeft()">
-                        Go Back
+                        Menu
                     </md-button>
                     <h2>
-                        <span>Toolbar with Standard Buttons</span>
+                        <span>GST TNP Portal</span>
                     </h2>
                     <span flex></span>
                     <md-button class="md-raised" aria-label="Learn More">
@@ -48,6 +48,7 @@
                     <md-button class="md-fab md-mini" aria-label="Favorite">
                         <md-icon md-svg-icon="images/more_vert.svg"></md-icon>
                     </md-button>
+
                 </div>
             </md-toolbar>
 
@@ -55,15 +56,15 @@
         <!--<section layout="row" >-->
             <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" >
                 <md-toolbar class="md-theme-indigo">
-                    <h1 class="md-toolbar-tools">Sidenav Left</h1>
+                    <h1 class="md-toolbar-tools"></h1>
                 </md-toolbar>
                 <md-content layout-padding ng-controller="LeftCtrl">
 
                     <md-card>
                         <md-card-title>
                             <md-card-title-text>
-                                <span class="md-headline">Card with  image</span>
-                                <span class="md-subhead">Extra Large</span>
+                                <span class="md-headline">Student name</span>
+                                <span class="md-subhead">4th Year B.tech in IT</span>
                             </md-card-title-text>
                         </md-card-title>
                         <md-card-content layout="row" layout-align="space-between">
