Renamed package to ctc

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -196,7 +196,7 @@
 
                             <div class="md-list-item-text">
                                 <h3>{{user.company_name}}</h3>
-                                <h4>{{user.package}}</h4>
+                                <h4>{{user.ctc}}</h4>
                                 <p>{{user.JD}}</p>
                                 <p>{{user.company_description}}</p>
                             </div>
