Fixed vertical height

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -108,7 +108,7 @@
                 </md-content>
             </md-sidenav>-->
         <!--</section>-->
-        <div class="page-layout simple right-sidenav ng-scope layout-row">
+        <div class="page-layout simple right-sidenav ng-scope layout-row" style="height: 100vh;">
 
             <div style="height: 100vh;width: 80%;">
                 <md-content id="change" class="md-padding" layout="row" layout-wrap layout-align="center start" style="height: 100vh;z-index: 3; box-shadow: 0 4px 5px -2px rgba(0,0,0,.2),0 7px 10px 1px rgba(0,0,0,.14),0 2px 16px 1px rgba(0,0,0,.12);" layout-xs="column">
