--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
 
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-    <!--<link rel='stylesheet prefetch' href='https://material.angularjs.org/1.0.1-master-2eaf210/docs.css'>-->
+    
 
     <link rel="stylesheet" href="stylesheets/angular_style.css">
 
@@ -42,13 +42,26 @@
                     <span>GST TNP Portal</span>
                 </h2>
                 <span flex></span>
-                <md-button class="md-raised" aria-label="Learn More">
-                    Learn More
-                </md-button>
-                <md-button class="md-fab md-mini" aria-label="Favorite">
-                    <md-icon md-svg-icon="images/more_vert.svg"></md-icon>
-                </md-button>
-
+                <!--<md-button class="md-raised" aria-label="Learn More">
+                    Learn M
+                </md-button>-->
+                <md-menu>
+                    <md-button class="md-fab md-mini" aria-label="Favorite" ng-click="$mdOpenMenu($event)">
+                        <md-icon md-svg-icon="images/more_vert.svg"></md-icon>
+                    </md-button>
+                    <md-menu-content width="2.5">
+                        <md-menu-item >
+                            <md-button ng-click="dialog_1()">
+                                Contact
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-item >
+                            <md-button ng-click="logout()">
+                                Logout
+                            </md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
             </div>
         </md-toolbar>
 
