Added local src files instead of cdn

--- a/views/admin_login.ejs
+++ b/views/admin_login.ejs
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Home</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="stylesheets/css.css">
 
 
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-    <!--<link rel='stylesheet prefetch' href='https://material.angularjs.org/1.0.1-master-2eaf210/docs.css'>-->
+    <link rel="stylesheet" href="stylesheets/angular-material.min.css">
+
 
     <link rel="stylesheet" href="stylesheets/angular_style.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.min.js"></script>
+    <script src="javascripts/angular.min.js"></script>
+    <script src="javascripts/angular-animate.min.js"></script>
+    <script src="javascripts/angular-aria.min.js"></script>
+    <script src="javascripts/angular-messages.min.js"></script>
+    <script src="javascripts/angular-resource.min.js"></script>
 
 
     <!-- Angular Material Library -->
-    <script src="https://code.angularjs.org/1.4.9/angular-route.js"></script>
+    <script src="javascripts/angular-route.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.4/angular-material.min.js"></script>
+    <script src="javascripts/angular-material.min.js"></script>
     <script src="javascripts/admin_login.js"></script>
 
 
