--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,7 +69,7 @@
     <!--<section layout="row" >-->
     <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" >
         <md-toolbar class="md-theme-indigo">
-            <h1 class="md-toolbar-tools"></h1>
+            <h1 class="md-toolbar-tools" >Menu</h1>
         </md-toolbar>
         <md-content layout-padding ng-controller="LeftCtrl">
 
