Added dialog view and few backend fixes
added dialog view for details of company
Reduced the timeout period for calls to the server

--- a/views/admin_login.ejs
+++ b/views/admin_login.ejs
@@ -42,9 +42,7 @@
                     <span>GST TNP Portal Admin Panel</span>
                 </h2>
                 <span flex></span>
-                <md-button class="md-raised" aria-label="Learn More">
-                    Learn More
-                </md-button>
+
                 <md-button class="md-fab md-mini" aria-label="Favorite">
                     <md-icon md-svg-icon="images/more_vert.svg"></md-icon>
                 </md-button>
@@ -63,13 +61,13 @@
             <md-card>
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Admin name</span>
+                        <span class="md-headline">Placement Co-ordinator</span>
                         <span class="md-subhead">Dept of Traning and Placement</span>
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content layout="row" layout-align="space-between">
                     <div class="md-media-sm card-media">
-                        <img src="images/Untitled.png">
+                        <img src="https://image.freepik.com/free-icon/user-male-silhouette_318-55563.png" width="150px" height="150px">
                     </div>
 
                 </md-card-content>
