--- a/views/login.ejs
+++ b/views/login.ejs
@@ -76,13 +76,13 @@
             <md-card>
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Student name</span>
+                        <span class="md-headline">Prem</span>
                         <span class="md-subhead">4th Year B.tech in IT</span>
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content layout="row" layout-align="space-between">
                     <div class="md-media-sm card-media">
-                        <img src="images/Untitled.png">
+                        <img src="https://image.freepik.com/free-icon/user-male-silhouette_318-55563.png" width="150px" height="150px">
                     </div>
 
                 </md-card-content>
